...
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_width="0dp"
        android:layout_height="565dp"
        app:layout_constraintBottom_toBottomOf="@+id/navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/my_toolbar" />

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
...
