...
        android:layout_marginBottom="-15dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="Decline"
        android:textSize="10sp" />

    <Button
        android:id="@+id/accept"
        android:layout_width="76dp"
        android:layout_height="40dp"
        android:layout_alignBottom="@+id/friends_name"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="-15dp"
        android:backgroundTint="@android:color/holo_green_dark"
        android:text="Accept"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/friends_name"
        android:layout_width="200dp"
        android:layout_height="36dp"
...
